# src/main/java/mariposas/controller/SponsorshipController.java
@@ -8,6 +8,7 @@ import mariposas.model.MenteesModelInner;
 import mariposas.model.MentorModel;
 import mariposas.model.ResponseModel;
 import mariposas.model.SponsorshipModel;
+import mariposas.model.SponsorshipNotificationMentorModel;
 import mariposas.model.SponsorshipNotificationModel;
 import mariposas.service.JwtService;
 import mariposas.service.SponsorshipService;
@@ -95,13 +96,18 @@ public class SponsorshipController implements SponsorshipApi {
     }
 
     @Override
-    public SponsorshipNotificationModel sponsorshipNotification(String token, String email) {
-        if (!userService.isMentor(email)) {
+    public SponsorshipNotificationMentorModel sponsorshipNotificationMentor(String token, String email) {
+        if (jwtService.validate(token, email) && jwtService.isValid(token)) {
+            return sponsorshipService.sponsorshipNotificationMentor(email);
+        } else {
             throw new BaseException(HttpStatus.UNPROCESSABLE_ENTITY, LOGIN_FAIL);
         }
+    }
 
+    @Override
+    public SponsorshipNotificationModel sponsorshipNotificationMentee(String token, String email) {
         if (jwtService.validate(token, email) && jwtService.isValid(token)) {
-            return sponsorshipService.sponsorshipNotification(email);
+            return sponsorshipService.sponsorshipNotificationMentee(email);
         } else {
             throw new BaseException(HttpStatus.UNPROCESSABLE_ENTITY, LOGIN_FAIL);
         }
